--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,8 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -53,7 +55,7 @@
     "# import urllib.request\n",
     "# from urllib.request import urlopen\n",
     "# import random\n",
-    "# import re\n",
+    "import re\n",
     "# import scrapy"
    ]
   },
@@ -67,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -77,10 +81,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, 'lxml')"
    ]
   },
   {
@@ -135,10 +143,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#your code"
+    "nombre = soup.find_all('h1', {\"class\" : 'h3 lh-condensed'})\n",
+    "\n",
+    "name = [nombre[i].text.replace('\\n','').strip() for i in range(len(nombre))]"
    ]
   },
   {
@@ -153,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -163,10 +177,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#your code"
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, 'lxml')\n",
+    "repo = soup.find_all('h1',{'class' : 'h3 lh-condensed' })\n",
+    "repo = [repo[i].text.replace('\\n','').split('/')[1].strip() for i in range(len(repo))]"
    ]
   },
   {
@@ -179,20 +198,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
+    "url = 'http://en.wikipedia.org/wiki/Walt_Disney'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#your code"
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, 'lxml')\n",
+    "img = soup.find_all('img')\n",
+    "img_url = [i for i in [img[i]['src'] for i in range(len(img))] if i != '']"
    ]
   },
   {
@@ -205,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -215,10 +243,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#your code"
+    "html = requests.get(url).content\n",
+    "soup =BeautifulSoup(html, 'lxml')\n",
+    "sucio = list(soup.find_all('link'))\n",
+    "link = [str(sucio[i]).split(' ')[1] for i in range(len(sucio))]"
    ]
   },
   {
@@ -230,8 +263,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -240,11 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, 'lxml')\n",
+    "bold = soup.find_all('div', {'class' :\"usctitlechanged\"})\n",
+    "t_bold = [bold[i].text.replace('\\n',\"\").strip() for i in range(len(bold))]\n",
+    "len(t_bold)"
    ]
   },
   {
@@ -256,8 +308,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -266,11 +320,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ALEXIS FLORES',\n",
+       " 'EUGENE PALMER',\n",
+       " 'SANTIAGO VILLALBA MEDEROS',\n",
+       " 'RAFAEL CARO-QUINTERO',\n",
+       " 'ROBERT WILLIAM FISHER',\n",
+       " 'BHADRESHKUMAR CHETANBHAI PATEL',\n",
+       " 'ARNOLDO JIMENEZ',\n",
+       " 'ALEJANDRO ROSALES CASTILLO',\n",
+       " 'YASER ABDEL SAID',\n",
+       " 'JASON DEREK BROWN']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code "
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, 'lxml')\n",
+    "criminals = soup.find_all('h3', {'class' :\"title\"})\n",
+    "criminal_clean = [criminals[i].text.replace('\\n','') for i in range(len(criminals))]"
    ]
   },
   {
@@ -282,8 +361,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -292,11 +373,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#your code"
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "table = soup.find_all('tbody')\n",
+    "t_20 = [table[i].text.split('\\n') for i in range(len(table))][0][:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['earthquake2019-11-06\\xa0\\xa0\\xa021:53:54.259min ago41.78\\xa0N\\xa0\\xa013.61\\xa0E\\xa0\\xa015ML2.2\\xa0SOUTHERN ITALY2019-11-06 21:58',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa021:37:13.41hr 15min ago19.49\\xa0N\\xa0\\xa0155.26\\xa0W\\xa0\\xa0-1ML2.3\\xa0ISLAND OF HAWAII, HAWAII2019-11-06 21:43',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa021:07:37.21hr 45min ago19.21\\xa0N\\xa0\\xa0155.41\\xa0W\\xa0\\xa035Md2.1\\xa0ISLAND OF HAWAII, HAWAII2019-11-06 21:11',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa021:00:56.71hr 52min ago22.96\\xa0S\\xa0\\xa066.20\\xa0W\\xa0\\xa0224mb4.8\\xa0JUJUY, ARGENTINA2019-11-06 22:35',\n",
+       " '12IIIearthquake2019-11-06\\xa0\\xa0\\xa020:52:58.62hr 00min ago14.86\\xa0N\\xa0\\xa0122.67\\xa0E\\xa0\\xa030Mw5.6\\xa0LUZON, PHILIPPINES2019-11-06 21:29',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa020:48:24.42hr 04min ago19.21\\xa0N\\xa0\\xa0155.43\\xa0W\\xa0\\xa035Ml2.2\\xa0ISLAND OF HAWAII, HAWAII2019-11-06 20:54',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa020:39:30.02hr 13min ago9.85\\xa0N\\xa0\\xa084.64\\xa0W\\xa0\\xa051 M3.5\\xa0COSTA RICA2019-11-06 21:05',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa020:33:32.12hr 19min ago36.66\\xa0N\\xa0\\xa0121.28\\xa0W\\xa0\\xa06MD2.1\\xa0CENTRAL CALIFORNIA2019-11-06 20:35',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa020:04:04.52hr 48min ago59.75\\xa0N\\xa0\\xa0151.38\\xa0W\\xa0\\xa054ml3.3\\xa0KENAI PENINSULA, ALASKA2019-11-06 20:17',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa020:00:56.02hr 52min ago0.07\\xa0N\\xa0\\xa0127.28\\xa0E\\xa0\\xa0142 M4.4\\xa0HALMAHERA, INDONESIA2019-11-06 20:25',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa019:08:15.23hr 44min ago19.73\\xa0N\\xa0\\xa0155.41\\xa0W\\xa0\\xa022Md2.1\\xa0ISLAND OF HAWAII, HAWAII2019-11-06 19:11',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa018:44:31.04hr 08min ago31.97\\xa0S\\xa0\\xa068.19\\xa0W\\xa0\\xa0110 M3.6\\xa0SAN JUAN, ARGENTINA2019-11-06 18:51',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa018:30:18.04hr 22min ago42.84\\xa0S\\xa0\\xa074.43\\xa0W\\xa0\\xa033ML3.1\\xa0OFFSHORE LOS LAGOS, CHILE2019-11-06 18:43',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa018:30:11.04hr 22min ago29.82\\xa0S\\xa0\\xa071.97\\xa0W\\xa0\\xa043ML3.2\\xa0OFFSHORE COQUIMBO, CHILE2019-11-06 18:47',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa018:00:27.24hr 52min ago34.31\\xa0N\\xa0\\xa033.65\\xa0E\\xa0\\xa015ML3.0\\xa0CYPRUS REGION2019-11-06 19:33',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa017:37:55.95hr 15min ago39.65\\xa0N\\xa0\\xa038.81\\xa0E\\xa0\\xa05ML2.4\\xa0EASTERN TURKEY2019-11-06 19:17',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa017:34:52.95hr 18min ago44.29\\xa0N\\xa0\\xa010.77\\xa0E\\xa0\\xa057ML2.6\\xa0NORTHERN ITALY2019-11-06 17:54',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa017:25:55.05hr 27min ago20.34\\xa0S\\xa0\\xa068.92\\xa0W\\xa0\\xa0107ML3.0\\xa0TARAPACA, CHILE2019-11-06 17:44',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa017:24:17.35hr 28min ago57.96\\xa0N\\xa0\\xa0156.29\\xa0W\\xa0\\xa0136ML3.4\\xa0ALASKA PENINSULA2019-11-06 18:43',\n",
+       " 'earthquake2019-11-06\\xa0\\xa0\\xa016:43:36.06hr 09min ago28.76\\xa0S\\xa0\\xa067.18\\xa0W\\xa0\\xa0130 M3.5\\xa0LA RIOJA, ARGENTINA2019-11-06 16:56']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_20"
    ]
   },
   {
@@ -309,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -319,7 +448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code"
@@ -343,7 +474,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise \n",
@@ -354,7 +487,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code"
@@ -378,7 +513,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise \n",
@@ -389,7 +526,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code"
@@ -405,7 +544,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -415,7 +556,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code"
@@ -431,7 +574,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -441,7 +586,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code "
@@ -457,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
@@ -467,7 +616,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code"
@@ -490,7 +641,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise \n",
@@ -501,7 +654,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# your code"
@@ -517,7 +672,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise \n",
@@ -527,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# your code"
@@ -543,7 +702,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This is the url you will scrape in this exercise\n",
@@ -553,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code"
@@ -569,7 +732,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#https://openweathermap.org/current\n",
@@ -580,7 +745,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# your code"
@@ -596,7 +763,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise. \n",
@@ -607,7 +776,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code"
@@ -630,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
