--- a/module-3/lab-intro-to-sklearn/your-code/main (1).ipynb
+++ b/module-3/lab-intro-to-sklearn/your-code/main (1).ipynb
@@ -12,12 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import your libraries:\n",
-    "\n"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn import datasets"
    ]
   },
   {
@@ -38,12 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "diabetes = datasets.load_diabetes()\n"
    ]
   },
   {
@@ -55,12 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['data', 'target', 'DESCR', 'feature_names', 'data_filename', 'target_filename'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "diabetes.keys()"
    ]
   },
   {
@@ -72,11 +82,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _diabetes_dataset:\n",
+      "\n",
+      "Diabetes dataset\n",
+      "----------------\n",
+      "\n",
+      "Ten baseline variables, age, sex, body mass index, average blood\n",
+      "pressure, and six blood serum measurements were obtained for each of n =\n",
+      "442 diabetes patients, as well as the response of interest, a\n",
+      "quantitative measure of disease progression one year after baseline.\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "  :Number of Instances: 442\n",
+      "\n",
+      "  :Number of Attributes: First 10 columns are numeric predictive values\n",
+      "\n",
+      "  :Target: Column 11 is a quantitative measure of disease progression one year after baseline\n",
+      "\n",
+      "  :Attribute Information:\n",
+      "      - Age\n",
+      "      - Sex\n",
+      "      - Body mass index\n",
+      "      - Average blood pressure\n",
+      "      - S1\n",
+      "      - S2\n",
+      "      - S3\n",
+      "      - S4\n",
+      "      - S5\n",
+      "      - S6\n",
+      "\n",
+      "Note: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times `n_samples` (i.e. the sum of squares of each column totals 1).\n",
+      "\n",
+      "Source URL:\n",
+      "https://www4.stat.ncsu.edu/~boos/var.select/diabetes.html\n",
+      "\n",
+      "For more information see:\n",
+      "Bradley Efron, Trevor Hastie, Iain Johnstone and Robert Tibshirani (2004) \"Least Angle Regression,\" Annals of Statistics (with discussion), 407-499.\n",
+      "(https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "print(diabetes.DESCR)"
    ]
   },
   {
@@ -92,7 +147,7 @@
    "source": [
     "#### Enter your answer here:\n",
     "\n",
-    "\n"
+    "age, sex, body mass index, average blood pressure, and six blood serum measurements\n"
    ]
   },
   {
@@ -104,12 +159,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(442, 10)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "diabetes['data'].shape"
    ]
   },
   {
@@ -130,12 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -147,12 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "diabetes_model = linear_model.LinearRegression()"
    ]
   },
   {
@@ -164,12 +229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -10.01219782 -239.81908937  519.83978679  324.39042769 -792.18416163\n",
+      "  476.74583782  101.04457032  177.06417623  751.27932109   67.62538639]\n",
+      "152.1334841628965\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "linreg = diabetes_model.fit(diabetes['data'], diabetes['target'])\n",
+    "print(linreg.coef_)\n",
+    "print(linreg.intercept_)"
    ]
   },
   {
@@ -218,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,12 +312,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horse_power</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>car_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"chevrolet chevelle malibu\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"buick skylark 320\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"plymouth satellite\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"amc rebel sst\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"ford torino\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement  horse_power  weight  acceleration  \\\n",
+       "0  18.0          8         307.0        130.0    3504          12.0   \n",
+       "1  15.0          8         350.0        165.0    3693          11.5   \n",
+       "2  18.0          8         318.0        150.0    3436          11.0   \n",
+       "3  16.0          8         304.0        150.0    3433          12.0   \n",
+       "4  17.0          8         302.0        140.0    3449          10.5   \n",
+       "\n",
+       "   model_year                       car_name  \n",
+       "0          70  \\t\"chevrolet chevelle malibu\"  \n",
+       "1          70          \\t\"buick skylark 320\"  \n",
+       "2          70         \\t\"plymouth satellite\"  \n",
+       "3          70              \\t\"amc rebel sst\"  \n",
+       "4          70                \\t\"ford torino\"  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "auto.head()"
    ]
   },
   {
@@ -253,29 +440,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg             float64\n",
+       "cylinders         int64\n",
+       "displacement    float64\n",
+       "horse_power     float64\n",
+       "weight            int64\n",
+       "acceleration    float64\n",
+       "model_year        int64\n",
+       "car_name         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "auto.dtypes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the newest model year and the oldest model year?"
+    "What is the newest model year and the oldest model year?\n",
+    "\n",
+    "**newest = 82**\n",
+    "\n",
+    "\n",
+    "**oldest = 70**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "auto['model_year'].unique()"
    ]
   },
   {
@@ -287,12 +507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "auto =auto.dropna()"
    ]
   },
   {
@@ -304,12 +523,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    199\n",
+       "8    103\n",
+       "6     83\n",
+       "3      4\n",
+       "5      3\n",
+       "Name: cylinders, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "auto['cylinders'].value_counts()"
    ]
   },
   {
@@ -323,30 +557,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the necessary function\n",
-    "\n"
+    "auto.drop(['car_name'],inplace=True, axis =1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "y =auto['mpg']\n",
+    "X = auto.loc[:,auto.columns != 'mpg' ]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size = .2, random_state =42)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -357,12 +585,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "auto_model = linear_model.LinearRegression()"
    ]
   },
   {
@@ -374,12 +602,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.116173    0.00101347 -0.00227634 -0.00656101  0.06173551  0.76063644]\n",
+      "-15.057758585282361\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "auto_lr=auto_model.fit(X_train,y_train)\n",
+    "print(auto_lr.coef_)\n",
+    "print(auto_lr.intercept_)"
    ]
   },
   {
@@ -395,22 +634,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the necessary function:\n",
-    "\n"
+    "from sklearn.metrics import r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "313"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "len(y_pred)"
    ]
   },
   {
@@ -424,12 +672,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7942349075428586"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "y_pred = auto_lr.predict(X_test)\n",
+    "r2_score(y_test, y_pred)"
    ]
   },
   {
@@ -445,12 +704,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "X_train09, X_test09, y_train09, y_test09 = train_test_split(X,y,test_size = .1, random_state =42)"
    ]
   },
   {
@@ -462,12 +720,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "auto_model09 = linear_model.LinearRegression()\n",
+    "auto09_lr =auto_model09.fit(X_train09, y_train09)"
    ]
   },
   {
@@ -479,12 +737,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8047940166959004"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "y_pred09 = auto09_lr.predict(X_train09)\n",
+    "r2_score(y_train09, y_pred09)\n"
    ]
   },
   {
@@ -496,12 +765,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8468911998183241"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "y_pred09 = auto09_lr.predict(X_test09)\n",
+    "r2_score(y_test09, y_pred09)\n"
    ]
   },
   {
@@ -616,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
